My next target section done

--- a/index.html
+++ b/index.html
@@ -113,6 +113,51 @@
       </div>
     </section>
 
+    <section id="my-next-target-section">
+
+      <div class="my-next-target-text">
+        <h3>My Next Target</h3>
+        <p>Right Now I am learning HTML, CSS, JavaScript. After these steps I plan on learning ReactJS, NodeJS, MongoDB. Just setting up an website can never be the limit of what a developer can do, As developers we should always aim to learn more and more, So that we can keep creating new and different types of website.</p>
+      </div>
+
+      <div class="reactjs">
+        <div class="reactjs-img">
+          <img src="/assets/react.png" alt="react.png">
+        </div>
+
+        <div class="reactjs-content">
+          <h3>ReactJS</h3>
+          <p>Since this allows you to to use declarative HTML syntax directly in your JS code, My next target is deadset on ReactJS.</p>
+          <a href="https://react.dev/learn" target="_blank">Learn More</a>
+        </div>
+      </div>
+      
+      <div class="nodejs">
+        <div class="nodejs-img">
+          <img src="/assets/nodejs.png" alt="node.png">
+        </div>
+
+        <div class="nodejs-content">
+          <h3>NodeJS</h3>
+          <p>I also want to learn server side platforms, So after ReactJS, NodeJS will be my target to learn and master.</p>
+          <a href="https://nodejs.org/en/learn/getting-started/introduction-to-nodejs" target="_blank">Learn More</a>
+        </div>
+      </div>
+      
+      <div class="mongodb">
+        <div class="mongodb-img">
+          <img src="/assets/mongodb.png" alt="mongodb.png">
+        </div>
+
+        <div class="mongodb-content">
+          <h3>MongoDB</h3>
+          <p>Software Applications can always be a handy skill to have. And MongoDB allows you to do just that. So I also have my eyes set on learning MongoDB.</p>
+          <a href="https://www.mongodb.com/solutions/developer-data-platform" target="_blank">Learn More</a>
+        </div>
+      </div>
+
+    </section>
+
   </main>
 
   <footer>
