Website done only a bit of polishing left

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="/assets/Group.png" alt="Coming Soon">
       <h2>"Web development is difficult, only when you <br> set your standard is it fun to do."</h2>
       <p>Greetings, My name is Md. Shafiqul Islam. I am an aspiring web-developer, <br> trying to make my way towards the path of improvement.<br> Looking for a developer with a hunger to prove himself? Well, Looks like you found exactly that!</p>
-      <button class="contact-btn">Contact with me</button>
+      <a href="#feedback-section"><button class="contact-btn">Contact with me</button></a>
     </div>
   </header>
   
@@ -174,6 +174,22 @@
       
       </div>
 
+    </section>
+
+    <section id="footer-section">
+
+      <div class="footer-container">
+        <div class="footer-text">
+          <h3>The portfolio of Md. Shafiqul Islam</h3>
+        </div>
+
+        <div class="footer-icons">
+          <a href="https://www.facebook.com/aronnorahman.shawpno/" target="_blank"><img src="/assets/facebook.png" alt="facebook.png"></a>
+          <a href="https://github.com/kyoChiwow" target="_blank"><img src="/assets/github.png" alt="github.png"></a>
+          <a href="https://www.linkedin.com/in/shafiqul-islam-87250b158/" target="_blank"><img src="/assets/linkedin-icon 1.png" alt="linkedin.png"></a>
+        </div>
+      
+      </div>
     </section>
 
   </main>
