Website development Done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="why-web-development-content-2-left">
               <h3 class="web-development-content-header">My Coding will change the world</h3>
               <p class="web-development-content-para">I want have an impactful effect on the world by using my coding skill.That maybe very hard to achieve but giving up isn't my forte.</p>
-              <button class="learn-more-btn">Learn More</button>
+              <a href="https://campuspress.yale.edu/ledger/coding-the-future-how-programming-is-shaping-the-next-decade/" target="_blank"><button class="learn-more-btn">Learn More</button></a>
             </div>
             <div class="why-web-development-content-2-right">
               <img src="assets/Layer_1.png" alt="Layer-1">
@@ -47,7 +47,7 @@
           <div class="why-web-development-content-3-right">
             <h3 class="web-development-content-header">Helping people by creating modern websites</h3>
             <p class="web-development-content-para">Website has become an inseparable object. So helping people to create modern website will help my goal to have an impact on the world.</p>
-            <button class="learn-more-btn">Learn More</button>
+            <a href="https://cyb.co.uk/blog/benefits-modern-website/" target="_blank"><button class="learn-more-btn">Learn More</button></a>
           </div>
         
         </div>
@@ -56,7 +56,7 @@
           <div class="why-web-development-content-4-left">
             <h3 class="web-development-content-header">Having a career that is meaningful</h3>
           <p class="web-development-content-para">After all this, having a career that I can proud of, seems to me one of the most important thing a human can have. So, just working towards your goal isn't enough. You have to love what you do. And thats what I want for myself.</p>
-          <button class="learn-more-btn">Learn More</button>
+          <a href="https://adamsgabbert.com/the-benefits-of-pursuing-a-meaningful-career/" target="_blank"><button class="learn-more-btn">Learn More</button></a>
           </div>
           <div class="why-web-development-content-4-right">
             <img src="/assets/Group 4.png" alt="Layer-3">
