header image fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header id="banner-section">
     <div class="banner-section-content">
-      <img src="/assets/Group.png" alt="Coming Soon">
+      <img src="./assets/Group.png" alt="Coming Soon">
       <h2>"Web development is difficult, only when you <br> set your standard is it fun to do."</h2>
       <p>Greetings, My name is Md. Shafiqul Islam. I am an aspiring web-developer, <br> trying to make my way towards the path of improvement.<br> Looking for a developer with a hunger to prove himself? Well, Looks like you found exactly that!</p>
       <a href="#feedback-section"><button class="contact-btn">Contact with me</button></a>
