header image fix again

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a href="https://adamsgabbert.com/the-benefits-of-pursuing-a-meaningful-career/" target="_blank"><button class="learn-more-btn">Learn More</button></a>
           </div>
           <div class="why-web-development-content-4-right">
-            <img src="./assets/Group 4.png" alt="Layer-3">
+            <img src="assets/Group 4.png" alt="Layer-3">
           </div>
         </div>
       
