--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
         </div>
 
         <div class="footer-icons">
-          <a href="https://www.facebook.com/aronnorahman.shawpno/" target="_blank"><img src="/assets/facebook.png" alt="facebook.png"></a>
-          <a href="https://github.com/kyoChiwow" target="_blank"><img src="/assets/github.png" alt="github.png"></a>
-          <a href="https://www.linkedin.com/in/shafiqul-islam-87250b158/" target="_blank"><img src="/assets/linkedin-icon 1.png" alt="linkedin.png"></a>
+          <a href="https://www.facebook.com/aronnorahman.shawpno/" target="_blank"><img src="assets/facebook.png" alt="facebook.png"></a>
+          <a href="https://github.com/kyoChiwow" target="_blank"><img src="assets/github.png" alt="github.png"></a>
+          <a href="https://www.linkedin.com/in/shafiqul-islam-87250b158/" target="_blank"><img src="assets/linkedin-icon 1.png" alt="linkedin.png"></a>
         </div>
       
       </div>
